--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <header>
-        <section>
+        <section class='header'>
           <div class="container">
             <div class="row">
               <div class="col-sm-4">
-
+                    <div class="logotype"><a href="/"><img src="" alt="Я - МОГУ!"></a></div>
               </div>
             </div>
           </div>
