--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Я - МОГУ. Сервис поиска исполнителей.</title>
-    <link rel="stylesheet" href="assets//css/style.css" type="text/css">
+    <link rel="stylesheet" href="assets//css/style.min.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <section class='header'>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-4">
-                    <div class="logotype"><a href="/"><img src="" alt="Я - МОГУ!"></a></div>
-              </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="logotype"><a href="/"><img src="" alt="Я - МОГУ!"></a></div>
+                    </div>
+                </div>
             </div>
-          </div>
         </section>
 
     </header>
@@ -24,6 +28,9 @@
     <footer>
 
     </footer>
-<script src="assets/js/main.js" type="application/javascript" defer></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="assets/js/main.min.js" type="application/javascript" defer></script>
 </body>
+
 </html>
