--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
                     <div class="col-sm-4">
                         <div class="logotype"><a href="/"><img src="" alt="Я - МОГУ!"></a></div>
                     </div>
+                    <div class="col-sm-8">
+                        <div class="menu">
+                            <nav class="">
+                                <ul>
+                                    <li>
+                                        <a href="/"></a>
+                                        <a href=""></a>
+                                        <a href=""></a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
